<resources>
    <string name="app_name">kotlin-ridit</string>
    <string name="appName">ridit</string>
    <string name="hint_create_post_title">Un título descriptivo</string>
    <string name="hint_create_post_content">¡Qué lindo día!</string>
    <string name="create_post_title_header">Título del post</string>
    <string name="create_post_content_header">Contenido del post</string>
    <string name="create_post_btn_text">Crear Post</string>
    <string name="create_comment_header">Estas comentando al post</string>
    <string name="create_comment_content_header">Tu comentario</string>
    <string name="hint_create_comment">¡ja ja!</string>
    <string name="create_comment_btn_text">Comentar</string>
    <string name="post_creation_success">Se ha creado el post</string>
    <string name="comment_created">Comentario creado</string>
    <string name="register_hint_email">Email</string>
    <string name="register_hint_password">Password</string>
    <string name="register_btn_text">Registrarse</string>
    <string name="register_login_already_account">¿Ya tienes cuenta?</string>
    <string name="register_login_action_text">Ingresa</string>
    <string name="login_hint_email">Juan@mail.com</string>
    <string name="login_hint_password">Password</string>
    <string name="login_btn_login">Ingresar</string>
    <string name="login_already_register">¿No tienes cuenta?</string>
    <string name="login_register_action_text">Regístrate</string>
    <string name="profile_btn_text">perfil</string>
    <string name="profile_personal_data">datos personales</string>
    <string name="profile_post_history">historial de posts</string>
    <string name="profile_communities">comunidades</string>
    <string name="profile_messages">mensajes</string>
    <string name="personal_data_header">datos personales</string>
    <string name="post_history_header">tus posts</string>
    <string name="communities_header">tus comunidades</string>
    <string name="messages_header">tus mensajes</string>
    <string name="profile_comments_history">historial de comentarios</string>
    <string name="create_community_name_header">nombre</string>
    <string name="create_community_name_hint">un nombre descriptivo</string>
    <string name="create_community_description_header">¿De qué trata la comunidad?</string>
    <string name="create_community_descritption_hint">Por ej: Acá hablamos de cerveza húngara</string>
    <string name="create_community_btn_text">Crear comunidad</string>
    <string name="community_home_btn_join_text">unirse</string>
    <string name="community_icon">Ícono de comunidad</string>
    <string name="add_button">Añadir comunidad</string>

</resources>