<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/create_community_name_header"
        android:textColor="#333"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="2dp">

        <EditText
            android:id="@+id/etCommunityName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:height="60dp"
            android:background="@drawable/input_text_border"
            android:hint="@string/create_community_name_hint"
            android:inputType="text"
            android:padding="6sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/create_community_description_header"
        android:textColor="#333"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/teal_200"
        android:padding="10dp">

        <EditText
            android:id="@+id/etCommunityDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text_border"
            android:foregroundTint="#FFFFFF"
            android:gravity="top"
            android:hint="@string/create_community_descritption_hint"
            android:inputType="textMultiLine"
            android:minHeight="200dp" />

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btnCreateCommunity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/action_btn"
        android:text="@string/create_community_btn_text"
        android:textColor="#fafafa"
        android:textSize="20sp" />
</LinearLayout>